kubernetes/apps/authentication/oauth2-proxy/app/httproute.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: oauth2-proxy
  namespace: authentication
  annotations:
    external-dns.alpha.kubernetes.io/target: "traefik-int.ironstone.casa"
spec:
  hostnames:
    - auth.ironstone.casa
  parentRefs:
    - name: traefik-internal
      namespace: network
      sectionName: websecure
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - kind: Service
          name: oauth2-proxy-app
          port: 4180
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: oauth2-proxy-damacus
  namespace: authentication
  annotations:
    external-dns.alpha.kubernetes.io/target: "traefik-ext.damacus.io"
spec:
  hostnames:
    - auth.damacus.io
  parentRefs:
    - name: traefik-internal
      namespace: network
      sectionName: websecure
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - kind: Service
          name: oauth2-proxy-damacus
          port: 4180
